@@ -22,7 +22,7 @@
 				<td style='width: 100%; border: 0px; margin: 0px; padding: 0px;'>
 				   <div style='margin-top: 4px' id='vboxSettingsDisplayMemory' class='slider'><div class='sliderScale'></div></div>
 				</td>
-				<td><input type='text' class='vboxText' name='vboxSettingsDisplayMemoryValue' size='2' class='sliderValue' /> <span class='translate'>MB</span></td>
+				<td><input type='text' class='vboxText sliderValue' name='vboxSettingsDisplayMemoryValue' size='2' /> <span class='translate'>MB</span></td>
 			</tr>
 			<tr style='vertical-align: top;'>
 				<td style='border: 0px; margin: 0px; padding: 0px;'>
